globus-gridftp-server (11.5-1+gt6.@distro@) @distro@; urgency=low

  * add adler32 checksum support
  * disable threads on the daemon process
  * fix windows directory MDTM support

 -- Globus Toolkit <support@globus.org>  Tue, 04 Oct 2016 07:48:41 -0500

globus-gridftp-server (11.4-1+gt6.@distro@) @distro@; urgency=low

  * Update for el.5 openssl101e, replace docbook with asciidoc

 -- Globus Toolkit <support@globus.org>  Thu, 08 Sep 2016 13:48:13 -0400

globus-gridftp-server (11.3-1+gt6.@distro@) @distro@; urgency=low

  * Makefile fix

 -- Globus Toolkit <support@globus.org>  Thu, 18 Aug 2016 16:09:41 -0400

globus-gridftp-server (11.2-1+gt6.@distro@) @distro@; urgency=low

  * Updates for OpenSSL 1.1.0

 -- Globus Toolkit <support@globus.org>  Tue, 16 Aug 2016 15:48:57 -0400

globus-gridftp-server (11.1-1+gt6.@distro@) @distro@; urgency=low

  * fix forced ordering issues

 -- Globus Toolkit <support@globus.org>  Fri, 15 Jul 2016 13:56:34 -0500

globus-gridftp-server (11.0-2+gt6.@distro@) @distro@; urgency=low

  * bump aging version

 -- Globus Toolkit <support@globus.org>  Thu, 14 Jul 2016 15:12:36 -0500

globus-gridftp-server (11.0-1+gt6.@distro@) @distro@; urgency=low

  * add forced data ordering on reads to DSI interface

 -- Globus Toolkit <support@globus.org>  Thu, 14 Jul 2016 11:25:18 -0500

globus-gridftp-server (10.6-1+gt6.@distro@) @distro@; urgency=low

  * add Globus task id to transfer log

 -- Globus Toolkit <support@globus.org>  Wed, 29 Jun 2016 16:35:42 -0500

globus-gridftp-server (10.5-1+gt6.@distro@) @distro@; urgency=low

  * Don't errantly kill a transfer due to timeout while client is still connected

 -- Globus Toolkit <support@globus.org>  Mon, 27 Jun 2016 15:16:23 -0500

globus-gridftp-server (10.4-1+gt6.@distro@) @distro@; urgency=low

  * fix broken remote_node auth without sharing

 -- Globus Toolkit <support@globus.org>  Thu, 19 May 2016 09:49:15 -0500

globus-gridftp-server (10.3-1+gt6.@distro@) @distro@; urgency=low
